<resources>
    <string name="app_name">Currency Converter</string>
    <string name="value_to_convert">Value to convert</string>
    <string name="what_starting_currency">what is the starting currency?</string>
    <string name="Dollar">USD Dolar($)</string>
    <string name="Euro">EUR Euro(€)</string>
    <string name="Real">BLR Real(R$)</string>
    <string name="what_target_currency">what is the target currency?</string>
    <string name="calculate">Calculate</string>
    <string name="new_value">New value</string>
    <string name="round_up">Round up?</string>
</resources>