<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/value_to_convert"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:hint="@string/value_to_convert"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/starting_currency"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/what_starting_currency"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/value_to_convert" />

    <RadioGroup
        android:id="@+id/starting_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkedButton="@id/option_starting_dollar"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/starting_currency">

        <RadioButton
            android:id="@+id/option_starting_dollar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Dollar"
            />

        <RadioButton
            android:id="@+id/option_starting_euro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Euro" />

        <RadioButton
            android:id="@+id/option_starting_real"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Real" />

    </RadioGroup>

    <TextView
        android:id="@+id/target_currency"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/what_target_currency"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/value_to_convert" />

    <RadioGroup
        android:id="@+id/target_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkedButton="@id/option_target_dollar"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/starting_currency">

        <RadioButton
            android:id="@+id/option_target_dollar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Dollar" />

        <RadioButton
            android:id="@+id/option_target_euro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Euro" />

        <RadioButton
            android:id="@+id/option_target_real"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Real" />

    </RadioGroup>

    <Switch
        android:id="@+id/round_up_switch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/round_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/target_options" />

    <Button
        android:id="@+id/calculate_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/calculate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/round_up_switch" />

    <TextView
        android:id="@+id/tip_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/calculate_button" />

</androidx.constraintlayout.widget.ConstraintLayout>